--- a/dataflow.yml
+++ b/dataflow.yml
@@ -1,27 +1,27 @@
 nodes:
   - id: lidar
     custom:
-      source: build/lidar
+      source: build/lidar/build/test
       outputs:
         - scan
-  - id: imu
-    custom:
-      source: build/imu
-      outputs:
-        - data
+  # - id: imu
+  #   custom:
+  #     source: build/imu
+  #     outputs:
+  #       - data
   - id: amcl
     custom:
       source: build/amcl/build/test
       inputs:
         tick: dora/timer/millis/1
         scan: lidar/scan
-        imu: imu/data
+        # imu: imu/data
         twist: teb/twist
       outputs:
         - pose
   - id: teb
     custom:
-      source: build/teb/build/teb
+      source: build/teb/build/test
       inputs:
         tick: dora/timer/millis/100
         pose: amcl/pose
