--- a/dataflow.yml
+++ b/dataflow.yml
@@ -2,6 +2,8 @@ nodes:
   - id: lidar
     custom:
       source: build/lidar/build/test
+      inputs:
+         tick: dora/timer/millis/10
       outputs:
         - scan
   # - id: imu
@@ -13,8 +15,8 @@ nodes:
     custom:
       source: build/amcl/build/test
       inputs:
-        tick: dora/timer/millis/1
-        scan: lidar/scan
+        tick: dora/timer/millis/10
+        # scan: lidar/scan
         # imu: imu/data
         twist: teb/twist
       outputs:
